docs: atualizando o contrato da API
